# mimona

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh  registry.json
.github/workflows/: release.yml
assets/: mimona.desktop
frontend/: index.html  whatsapp.html
src/: assistant.rs  config.rs  main.rs  whatsapp.rs  whatsapp_bridge_launcher.rs  widget.rs
src/cli/: list.rs  mod.rs  node.rs  pull.rs  rm.rs  run.rs  serve.rs  show.rs  wallet.rs
src/desktop/: app.rs  mod.rs  panel_animation.rs  panel_automate.rs  panel_chat.rs  panel_models.rs  panel_promote.rs  panel_setup.rs  panel_website.rs  panel_whatsapp.rs  panel_widget.rs  state.rs  worker.rs
src/inference/: engine.rs  mod.rs  session.rs
src/models/: downloader.rs  mod.rs  registry.rs  storage.rs
src/node/: provider.rs  registry.rs
src/payment/: mod.rs  verify.rs  wallet.rs
src/server/: api.rs  routes.rs
whatsapp-bridge/: .gitignore  README.md  package-lock.json  package.json
whatsapp-bridge/src/: baileysAdapter.js  config.js  index.js  mimonaClient.js  officialAdapter.js
