[package]
name = "mimona"
version = "0.1.0"
edition = "2021"
description = "Run AI models locally with blockchain payments"
authors = ["Mimona Contributors"]
license = "MIT"

[[bin]]
name = "mimona"
path = "src/main.rs"

[package.metadata.winres]
# No extra metadata needed

[dependencies]
libc = "0.2"
fs2 = "0.4"
clap = { version = "4", features = ["derive", "color"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
colored = "2"
console = "0.15"
dialoguer = "0.11"
dirs = "5"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
num_cpus = "1"
base64 = "0.22"
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", features = ["png"] }

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true